--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "scripts": {
-        "cs-fix": "php vendor/bin/php-cs-fixer fix -v",
-        "cs-diff": "php vendor/bin/php-cs-fixer check -v --diff"
+        "lint:php": "php vendor/bin/php-cs-fixer check -v",
+        "lint:php:diff": "php vendor/bin/php-cs-fixer check -v --diff",
+        "lint:php:fix": "php vendor/bin/php-cs-fixer fix -v"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.56"
