--- a/.github/workflows/php-cs-fixer.yaml
+++ b/.github/workflows/php-cs-fixer.yaml
@@ -22,6 +22,8 @@ jobs:
     steps:
       - name: "☁️ checkout repository"
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: "🗄️ cache"
         uses: actions/cache@v4
