--- a/.github/workflows/php-cs-fixer.yaml
+++ b/.github/workflows/php-cs-fixer.yaml
@@ -36,9 +36,4 @@ jobs:
       - name: "🧹 run PHP-CS-Fixer"
         uses: docker://oskarstark/php-cs-fixer-ga:latest
         with:
-          args: --config=.php-cs-fixer.dist.php
-
-      - name: "🤖 commit fixed code"
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: 'fix: Apply PHP-CS-FIXER changes'
+          args: --config=.php-cs-fixer.dist.php --diff -v
