Revert "stop on violation"
This reverts commit cf0f090f3942dbef012ecdb7451e600215167be6.

--- a/.github/workflows/php-cs-fixer.yaml
+++ b/.github/workflows/php-cs-fixer.yaml
@@ -28,4 +28,4 @@ jobs:
       - name: "🧹 run PHP-CS-Fixer"
         uses: docker://oskarstark/php-cs-fixer-ga:latest
         with:
-          args: --config=.php-cs-fixer.dist.php --diff -v --dry-run --stop-on-violation
+          args: --config=.php-cs-fixer.dist.php --diff -v --dry-run
